--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,36 @@
   },
   "rules": {
     "semi" : [2, "always"],
-    "max-len": [2, 120, 2]
+    "max-len": [2, 120, 2],
+    "no-multi-spaces": [2, {
+      exceptions: {
+        "Property": true,
+        "VariableDeclarator": true,
+        "ImportDeclaration": true
+      }
+    }],
+    "space-before-function-paren": [2, {
+      "anonymous": "always",
+      "named": "always"
+    }],
+    "key-spacing": [1, {
+      "singleLine": {
+        "beforeColon": false,
+        "afterColon": true
+      },
+      "multiLine": {
+        "align": colon,
+        "beforeColon": true,
+        "afterColon": true
+      }
+    }],
+    "react/jsx-no-bind": [2, {
+      "allowArrowFunctions": true,
+      "allowBind": false
+    }],
+    "quotes": [2, "single", {
+      "avoidEscape": true,
+      "allowTemplateLiterals": true
+    }]
   }
 }
